--- a/arch/arm64/configs/noname_defconfig
+++ b/arch/arm64/configs/noname_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-NoName"
+CONFIG_LOCALVERSION="-NoName-v1.0"
 # CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_USELIB is not set
 CONFIG_AUDIT=y
@@ -96,7 +96,16 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
+CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
+CONFIG_CPU_FREQ_GOV_CULTIVATION=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BLU_ACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_IMPULSE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ZZMOOVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_CULTIVATION is not set
 CONFIG_CPU_BOOST=y
+CONFIG_CPU_WAKE_BOOST=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
@@ -104,6 +113,8 @@ CONFIG_XFRM_USER=y
 CONFIG_XFRM_STATISTICS=y
 CONFIG_NET_KEY=y
 CONFIG_INET=y
+CONFIG_WIREGUARD=y
+# CONFIG_WIREGUARD_DEBUG is not set
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
 CONFIG_IP_MULTIPLE_TABLES=y
@@ -459,6 +470,7 @@ CONFIG_FB_MSM_MDSS_WRITEBACK=y
 CONFIG_FB_MSM_MDSS_HDMI_PANEL=y
 CONFIG_FB_MSM_MDSS_DP_PANEL=y
 CONFIG_FB_MSM_MDSS_XLOG_DEBUG=n
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_LOGO=y
 # CONFIG_LOGO_LINUX_MONO is not set
 # CONFIG_LOGO_LINUX_VGA16 is not set
@@ -513,6 +525,8 @@ CONFIG_USB_CONFIGFS_F_HID=y
 CONFIG_USB_CONFIGFS_F_DIAG=y
 CONFIG_USB_CONFIGFS_F_CDEV=y
 CONFIG_USB_CONFIGFS_F_QDSS=y
+CONFIG_DYNAMIC_FSYNC=y
+CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_MMC=y
 #CONFIG_MMC_PERF_PROFILING=y
 CONFIG_MMC_CLKGATE=y
@@ -719,6 +733,31 @@ CONFIG_CMDLINE_EXTEND=y
 CONFIG_KERNEL_CUSTOM_WHYRED=y
 CONFIG_DYNAMIC_DEBUG=y
 CONFIG_MMC_FFU=y
+
+#
+# IO Schedulers
+#
+CONFIG_IOSCHED_MAPLE=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_BFQ_GROUP_IOSCHED=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_FIFO=y
+CONFIG_IOSCHED_SIOPLUS=y
+CONFIG_IOSCHED_TRIPNDROID=y
+CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_ZEN=y
+# CONFIG_DEFAULT_BFQ is not set
+# CONFIG_DEFAULT_FIOPS is not set
+# CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_FIFO is not set
+# CONFIG_DEFAULT_SIOPLUS is not set
+# CONFIG_DEFAULT_TRIPNDROID is not set
+# CONFIG_DEFAULT_VR is not set
+# CONFIG_DEFAULT_ZEN is not set
+CONFIG_DEFAULT_MAPLE=y
+CONFIG_DEFAULT_IOSCHED="maple"
+
 #
 # Qualcomm Atheros CLD WLAN module
 #
